<resources>
    <string name="app_name">Entregable</string>
    <string name="btnHide">Ocultar Action Bar</string>
    <string name="btnShow">Mostrar Action Bar</string>
    <string name="espacio"></string>


    <string name="listado">Listado Completo</string>
    <string name="fav">Favoritos</string>
    <string name="add">Añadir</string>

    <string name="addFav">Añadir/Quitar Favoritos</string>

    <string name="titulo">Título</string>
    <string name="director">Director</string>
    <string name="duracion">Duracion</string>
    <string name="fechaNull">Fecha no seleccionada</string>
    <string name="btnFecha">Seleccionar fecha</string>
    <string name="rbG">Todos los públicos</string>
    <string name="rbNC17">+18 años</string>
    <string name="rbPG">+10 años</string>
    <string name="rbPG13">+13 años</string>
    <string name="rbr4">+17 años</string>
    <string name="sala">Sala</string>
    <string-array name="salas">
        <item >Sala 1</item>
        <item >Sala 2</item>
        <item >Sala 3</item>
        <item >Sala 4</item>
        <item >Sala VIP</item>
    </string-array>
    <string name="error">Rellene todos los campos</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
</resources>
